# STEP_1_3D_Eng

./: .clang  CMakeLists.txt
assets/Shaders/: basic.frag  basic.vert
include/: Application.hpp  main.hpp
include/Graphics/: Shader.hpp
include/Other/: CallBacks.hpp  Debug.hpp
include/Window/: Events.hpp  Window.hpp
scripts/: test.loop
src/: Application.cpp  app.cpp  main.cpp
src/Graphics/: ShaderInit.cpp
src/Other/: Debug.cpp
src/Window/: WindowInit.cpp
